dataCenter/cloudformation/srm-tag.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Bristech SRM stack-in-a-box",
  "Parameters": {
    "environment": {
      "Type": "String",
      "Default": "null",
      "Description": "The environment tag"
    },
    "vpcId": {
      "Type": "String",
      "Default": "null",
      "Description": "The VPC to put it in"
    },
    "servicesSubnetId": {
      "Type": "String",
      "Default": "null",
      "Description": "The subnet Id to put it in"
    },
    "servicesSubnetCIDR": {
      "Type": "String",
      "Default": "null",
      "Description": "The subnet CIDR"
    },
    "concourseSubnetCIDR": {
      "Type": "String",
      "Default": "null",
      "Description": "The subnet CIDR Concourse runs in"
    }
  },
  "Resources": {
    "sgSshScottLogic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow SSH from ScottLogic Bristol",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "90.155.100.125/32"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-ssh-ScottLogic"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "environment"
            }
          }
        ],
        "VpcId": {
          "Ref": "vpcId"
        }
      }
    },
    "sgDockerSubnet": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow docker within subnet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "2377",
            "ToPort": "2377",
            "CidrIp": {
              "Ref": "servicesSubnetCIDR"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "7946",
            "ToPort": "7946",
            "CidrIp": {
              "Ref": "servicesSubnetCIDR"
            }
          },
          {
            "IpProtocol": "udp",
            "FromPort": "7946",
            "ToPort": "7946",
            "CidrIp": {
              "Ref": "servicesSubnetCIDR"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "4789",
            "ToPort": "4789",
            "CidrIp": {
              "Ref": "servicesSubnetCIDR"
            }
          },
          {
            "IpProtocol": "udp",
            "FromPort": "4789",
            "ToPort": "4789",
            "CidrIp": {
              "Ref": "servicesSubnetCIDR"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-docker-subnet"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "environment"
            }
          }
        ],
        "VpcId": {
          "Ref": "vpcId"
        }
      }
    },
    "sgSrmScottLogic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 80, 8080, 9090, 9003 from ScottLogic Bristol",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "90.155.100.125/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
            "CidrIp": "90.155.100.125/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "9090",
            "ToPort": "9090",
            "CidrIp": "90.155.100.125/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "9003",
            "ToPort": "9003",
            "CidrIp": "90.155.100.125/32"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-srm-ScottLogic"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "environment"
            }
          }
        ],
        "VpcId": {
          "Ref": "vpcId"
        }
      }
    },
    "sgSwarmConcourseSubnet": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow Swarm from Concourse subnet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "2377",
            "ToPort": "2377",
            "CidrIp": {
              "Ref": "concourseSubnetCIDR"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-swarm-concourse-subnet"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "environment"
            }
          }
        ],
        "VpcId": {
          "Ref": "vpcId"
        }
      }
    },
    "node1": {
      "Type": "AWS::EC2::Instance",
      "Description": "Node 1",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.nano",
        "KeyName": "nodes",
        "Tags": [
          {
            "Key": "Name",
            "Value": "node1"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "environment"
            }
          }
        ],
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [
              {
                "Ref": "sgSshScottLogic"
              },
              {
                "Ref": "sgDockerSubnet"
              },
              {
                "Ref": "sgSrmScottLogic"
              }
            ],
            "SubnetId": {
              "Ref": "servicesSubnetId"
            }
          }
        ]
      }
    },
    "node2": {
      "Type": "AWS::EC2::Instance",
      "Description": "Node 2",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.nano",
        "KeyName": "nodes",
        "Tags": [
          {
            "Key": "Name",
            "Value": "node2"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "environment"
            }
          }
        ],
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [
              {
                "Ref": "sgSshScottLogic"
              },
              {
                "Ref": "sgDockerSubnet"
              },
              {
                "Ref": "sgSrmScottLogic"
              }
            ],
            "SubnetId": {
              "Ref": "servicesSubnetId"
            }
          }
        ]
      }
    },
    "node3": {
      "Type": "AWS::EC2::Instance",
      "Description": "Node 3",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.nano",
        "KeyName": "nodes",
        "Tags": [
          {
            "Key": "Name",
            "Value": "node3"
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "environment"
            }
          }
        ],
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [
              {
                "Ref": "sgSshScottLogic"
              },
              {
                "Ref": "sgDockerSubnet"
              },
              {
                "Ref": "sgSwarmConcourseSubnet"
              },
              {
                "Ref": "sgSrmScottLogic"
              }
            ],
            "SubnetId": {
              "Ref": "servicesSubnetId"
            }
          }
        ]
      }
    }
  }
}
